--- a/lang/en.json
+++ b/lang/en.json
@@ -25,6 +25,7 @@
     "TYPES.Item.critical" : "Critical",
     "TYPES.Item.injury" : "Injury",
     "TYPES.Item.trait" : "Trait",
+    "TYPES.Item.pack" : "Pack",
     
     "IMPMAL.Aim" : "Aim",
     "IMPMAL.AddPatron" : "Add a Patron by either dragging and dropping from the sidebar or right clicking and choosing 'Set as Patron'",
@@ -38,6 +39,7 @@
     "IMPMAL.Ag" : "Ag",
     "IMPMAL.Age" : "Age",
     "IMPMAL.Agility" : "Agility",
+    "IMPMAL.Allocation" : "Allocation",
     "IMPMAL.Ammo" : "Ammo",
     "IMPMAL.AmmoCost" : "Ammo Cost",
     "IMPMAL.AmmoEffects" : "Ammo Effects",
@@ -74,10 +76,13 @@
     "IMPMAL.Availability" : "Availability",
     "IMPMAL.Awareness" : "Awareness",
     "IMPMAL.BS" : "BS",
+    "IMPMAL.Back" : "Back",
+    "IMPMAL.BackArmour" : "Back Armour",
     "IMPMAL.BallisticSkill" : "Ballistic Skill",
     "IMPMAL.Barrier" : "Barrier",
     "IMPMAL.Base" : "Base",
     "IMPMAL.Biomancy" : "Biomancy",
+    "IMPMAL.Biography" : "Biography",
     "IMPMAL.Blast" : "Blast",
     "IMPMAL.Body" : "Body",
     "IMPMAL.BodyAbbrev" : "B",
@@ -89,7 +94,8 @@
     "IMPMAL.Bulky" : "Bulky",
     "IMPMAL.BugReporter" : "Bug Reporter",
     "IMPMAL.Burst" : "Burst",
-    "IMPMAL.Buy" : "Buy ({cost})",
+    "IMPMAL.Buy" : "Buy",
+    "IMPMAL.BuyCost" : "Buy ({cost})",
     "IMPMAL.BuySuccessful" : "<p>Bought <strong>{item}</strong> for <strong>{cost} Solars</strong></p>",
     "IMPMAL.BuyAmmo" : "Buy Ammo",
     "IMPMAL.CalledShot" : "Called Shot",
@@ -98,6 +104,7 @@
     "IMPMAL.CannotEditPropertyWithEffect" : "This property cannot be edited because an Active Effect is being applied to it.",
     "IMPMAL.CannotDeleteItemEffect" : "This effect is from an Item on this Actor. Delete the Item itself or the effect from the Item's sheet.",
     "IMPMAL.Carapace" : "Carapace",
+    "IMPMAL.Career" : "Career",
     "IMPMAL.Cargo" : "Cargo",
     "IMPMAL.Category" : "Category",
     "IMPMAL.Chain" : "Chain",
@@ -116,6 +123,7 @@
     "IMPMAL.ChooseSpecialisation" : "Choose a Specialisation. If no selection is made, a blank specialisation will be created.",
     "IMPMAL.ChooseNum" : "Choose {num}",
     "IMPMAL.Choose" : "Choose",
+    "IMPMAL.ChooseActor" : "Choose Actor",
     "IMPMAL.ChooseFaction" : "Choose Faction",
     "IMPMAL.Close" : "Close",
     "IMPMAL.ClearRended" : "Clear Rended",
@@ -216,7 +224,8 @@
             "CriticalWounds" : "Auto-Calculate Critical Wounds",
             "Initiative" : "Auto-Calculate Initiative",
             "Corruption" : "Auto-Calculate Critical Corruption"
-        }
+        },
+        "ShowPassengers" : "Show Passenger Tokens"
     },
 
     "IMPMAL.CountEveryBullet" : "Count Every Bullet",
@@ -240,6 +249,7 @@
     "IMPMAL.Cover" : "Cover",
     "IMPMAL.Damage" : "Damage",
     "IMPMAL.DamageDisplay" : "{damage} Damage",
+    "IMPMAL.DamageTaken" : "{damage} Damage to {location}",
     "IMPMAL.Dark" : "Dark",
     "IMPMAL.Dead" : "Dead",
     "IMPMAL.DeadlyHazard" : "Deadly Hazard",
@@ -247,12 +257,16 @@
     "IMPMAL.Defended" : "Defended",
     "IMPMAL.Defensive" : "Defensive",
     "IMPMAL.Defend" : "Defend",
+    "IMPMAL.Delete" : "Delete",
     "IMPMAL.DeleteItem" : "Delete Item",
     "IMPMAL.DeleteItemConfirmation" : "Are you sure you wish to delete this Item?",
     "IMPMAL.DeleteActiveEffect" : "Delete Active Effect",
     "IMPMAL.DeleteActiveEffectConfirmation" : "Are you sure you wish to delete this Active Effect?",
     "IMPMAL.DeleteFaction" : "Delete Faction",
     "IMPMAL.DeleteFactionConfirmation" : "Are you sure you wish to delete this Faction?",
+    "IMPMAL.DeleteVehicleWeapon" : "Delete or store in Cargo?",
+    "IMPMAL.DeletePackContents" : "Delete Pack Contents",
+    "IMPMAL.DeletePackContentsPrompt" : "Delete all the Items within this Pack from the Actor?",
     "IMPMAL.DeletingEffectItems" : "Deleting Effect Items: {items}",
     "IMPMAL.Demeanor" : "Demeanor",
     "IMPMAL.Description" : "Description",
@@ -279,6 +293,7 @@
     "IMPMAL.Divination" : "Divination",
     "IMPMAL.Dodge" : "Dodge",
     "IMPMAL.DragModifications" : "Drag and drop Modification Items onto this sheet to add modifications.",
+    "IMPMAL.Driver/Pilot" : "Driver / Pilot",
     "IMPMAL.Durable" : "Durable",
     "IMPMAL.Duration" : "Duration",
     "IMPMAL.Duty" : "Duty",
@@ -327,6 +342,9 @@
     "IMPMAL.ErrorSlotItemActor" : "Both this and the slotted Item must be owned by an Actor.",
     "IMPMAL.ErrorNoActorBuyItem" : "No assigned Actor to buy this Item.",
     "IMPMAL.ErrorNotEnoughSolars" : "{name} does not have enough Solars!",
+    "IMPMAL.ErrorOwnedItemInPack" : "Owned Items cannot be placed in a pack that is not owned.",
+    "IMPMAL.ErrorTraitType" : "Wrong Trait type",
+    "IMPMAL.ErrorNoAvailableActors" : "No available Actors to choose from.",
     "IMPMAL.Excellent" : "Excellent",
     "IMPMAL.ExposureMinor" : "Minor Exposure to Corruption",
     "IMPMAL.ExposureModerate" : "Moderate Exposure to Corruption",
@@ -355,7 +373,10 @@
     "IMPMAL.ForceFieldCollapsed" : "Force Field Collapsed",
     "IMPMAL.Formula" : "Formula",
     "IMPMAL.Fortitude" : "Fortitude",
+    "IMPMAL.Fraction" : "Fraction",
     "IMPMAL.Free" : "Free",
+    "IMPMAL.Front" : "Front",
+    "IMPMAL.FrontArmour" : "Front Armour",
     "IMPMAL.Fumble" : "Fumble",
     "IMPMAL.Gender" : "Gender",
     "IMPMAL.GMNotes" : "GM Notes",
@@ -380,6 +401,7 @@
     "IMPMAL.HowManyMags" : "How many magazines?",
     "IMPMAL.Hunted" : "Hunted",
     "IMPMAL.IgnoreAP" : "Ignore AP",
+    "IMPMAL.IgnoreEncumbrance" : "Ignore Encumbrance",
     "IMPMAL.IgnorePrerequisite" : "Ignore Prerequisite",
     "IMPMAL.IgnorePrerequisiteContent" : "<p>This Actor does not meet the prerequisite for this Talent. Continue anyway?</p>",
     "IMPMAL.Immediate" : "Immediate",
@@ -393,12 +415,14 @@
     "IMPMAL.Infl" : "Infl.",
     "IMPMAL.Initiative" : "Initiative",
     "IMPMAL.Injury" : "Injury",
+    "IMPMAL.Injuries" : "Injuries",
     "IMPMAL.Instant" : "Instant",
     "IMPMAL.InStock" : "In Stock!",
     "IMPMAL.InsufficentQuantity" : "Insufficent Quantity",
     "IMPMAL.Int" : "Int",
     "IMPMAL.Intelligence" : "Intelligence",
     "IMPMAL.Intuition" : "Intuition",
+    "IMPMAL.Items" : "Items",
     "IMPMAL.ItemsNotAllowed" : "This Item is not allowed on this Actor type",
     "IMPMAL.ItemTraits" : "Item Traits",
     "IMPMAL.ItemDisplayXSolars" : "{solars} Solars",
@@ -502,6 +526,7 @@
     "IMPMAL.OriginApplied" : "{name} Origin Applied",
     "IMPMAL.Ornamental" : "Ornamental",
     "IMPMAL.Other" : "Other",
+    "IMPMAL.Offsets" : "Offsets",
     "IMPMAL.OutOfStock" : "Out of Stock!",
     "IMPMAL.OverburdenedThreshold" : "Overburdened Threshold",
     "IMPMAL.Overload" : "Overload",
@@ -510,6 +535,7 @@
     "IMPMAL.Passengers" : "Passengers",
     "IMPMAL.Patron" : "Patron",
     "IMPMAL.Path" : "Path",
+    "IMPMAL.Packs" : "Packs",
     "IMPMAL.LightCover" : "Light Cover",
     "IMPMAL.MediumCover" : "Medium Cover",
     "IMPMAL.HeavyCover" : "Heavy Cover",
@@ -585,6 +611,7 @@
     "IMPMAL.Restricted" : "Restricted",
     "IMPMAL.Reversed" : "Reversed",
     "IMPMAL.Reward" : "Reward",
+    "IMPMAL.RemoveFromPack" : "Remove from Pack",
     "IMPMAL.Right" : "Right",
     "IMPMAL.RightArm" : "Right Arm",
     "IMPMAL.RightArmAbbrev" : "RA",
@@ -608,6 +635,8 @@
     "IMPMAL.SendingSocketRequest" : "Sending Socket Request to {name}",
     "IMPMAL.SeizeTheInitiative" : "Seize The Initiative",
     "IMPMAL.SetPatron" : "Set as Patron",
+    "IMPMAL.SelfTest" : "Self Test",
+    "IMPMAL.SelfTestTT" : "The Owner of this Trait should roll this Test.",
     "IMPMAL.Shield" : "Shield",
     "IMPMAL.Shock" : "Shock",
     "IMPMAL.Shoddy" : "Shoddy",
@@ -625,10 +654,12 @@
     "IMPMAL.Slots" : "Slow",
     "IMPMAL.Small" : "Small",
     "IMPMAL.Solars" : "Solars",
+    "IMPMAL.SolarsAdded" : "{solars} Solars added",
     "IMPMAL.Solid" : "Solid",
     "IMPMAL.Source" : "Source",
     "IMPMAL.Special" : "Special",
     "IMPMAL.Specialisation" : "Specialisation",
+    "IMPMAL.Specialisations" : "Specialisations",
     "IMPMAL.SpecialisationAdvances" : "Specialisation Advances",
     "IMPMAL.Specialised" : "Specialised",
     "IMPMAL.Species" : "Species",
@@ -645,20 +676,28 @@
     "IMPMAL.Str" : "Str",
     "IMPMAL.Strength" : "Strength",
     "IMPMAL.Structure" : "Structure",
+    "IMPMAL.Submit" : "Submit",
     "IMPMAL.Subtle" : "Subtle",
+    "IMPMAL.Subspecies" : "Subspecies",
     "IMPMAL.Success" : "Success",
     "IMPMAL.SuccumbingToCorruption" : "Succumbing to Corruption",
     "IMPMAL.Supercharge" : "Supercharge",
     "IMPMAL.Superiority" : "Superiority",
     "IMPMAL.SupportAttachment" : "Support Attachment",
     "IMPMAL.Sustained" : "Sustained",
+    "IMPMAL.Swift" : "Swift",
     "IMPMAL.TableSettings" : "Table Settings",
+    "IMPMAL.TableConfigure" : "Configure Tables",
     "IMPMAL.TableSettingsHint" : "Configure which tables the system uses in contextual links.",
     "IMPMAL.TableSetting.critarm" : "Critical Hits - Arm",
     "IMPMAL.TableSetting.critleg" : "Critical Hits - Leg",
     "IMPMAL.TableSetting.crithead" : "Critical Hits - Head",
     "IMPMAL.TableSetting.critbody" : "Critical Hits - Body",
     "IMPMAL.TableSetting.critvehicle" : "Critical Hits - Vehicle",
+    "IMPMAL.TableSetting.critwheeled" : "Critical Hits - Vehicle (Wheeled)",
+    "IMPMAL.TableSetting.critwalker" : "Critical Hits - Vehicle (Walker)",
+    "IMPMAL.TableSetting.critflyer" : "Critical Hits - Vehicle (Flyer)",
+    "IMPMAL.TableSetting.crittracked" : "Critical Hits - Vehicle (Tracked)",
     "IMPMAL.TableSetting.fumble" : "Fumble",
     "IMPMAL.TableSetting.perils" : "Perils of the Warp",
     "IMPMAL.TableSetting.phenomena" : "Psychic Phenomena",
@@ -735,6 +774,7 @@
     "IMPMAL.TriggerStartTurn" : "Start Turn",
     "IMPMAL.TriggerEndTurn" : "End Turn",
     "IMPMAL.TriggerRollTable" : "Roll Table",
+    "IMPMAL.TriggerEquipToggle" : "Equip Toggle",
     "IMPMAL.Troop" : "Troop",
     "IMPMAL.Trusted" : "Trusted",
     "IMPMAL.TwoHanded" : "Two Handed",
@@ -767,7 +807,10 @@
     "IMPMAL.Value" : "Value",
     "IMPMAL.VeryEasy" : "Very Easy",
     "IMPMAL.VeryHard" : "Very Hard",
+    "IMPMAL.Vehicle" : "Vehicle",
     "IMPMAL.VehicleWeapons" : "Vehicle Weapons",
+    "IMPMAL.VehicleDropTT" : "Drag and drop an Actor or Weapon",
+    "IMPMAL.VehicleControl" : "Vehicle Control",
     "IMPMAL.Vilified" : "Vilified",
     "IMPMAL.WR" : "WR",
     "IMPMAL.WS" : "WS",
@@ -798,5 +841,249 @@
     "IMPMAL.WorldShrine" : "Shrine",
     "IMPMAL.WorldHive" : "Hive",
     "IMPMAL.WorldForge" : "Forge",
-    "IMPMAL.XP" : "XP"
+    "IMPMAL.XP" : "XP",
+
+    "WH" : {
+        "Models" : {
+            "ammo"  : {
+                "FIELDS" : {
+                    "custom" : {
+                        "label" : "Custom",
+                        "hint" : "Drag and Drop Custom Ammo onto non-Custom ammo to apply the modifiers"
+                    },
+                    "priceMultiplier" : {
+                        "label" : "Price Multiplier"
+                    },
+                    "damage" : {
+                        "label" : "Damage"
+                    },
+                    "usedWith" : {
+                        "label" : "Used With"
+                    }
+                }
+            },
+            "boonLiability"  : {
+                "FIELDS" : {
+                    "category" : {
+                        "label" : "Category"
+                    },
+                    "oneUse" : {
+                        "label" : "One Use"
+                    }
+                }
+            },
+            "duty"  : {
+                "FIELDS" : {
+                    "category" : {
+                        "label" : "Category"
+                    },
+                    "character.solars" : {
+                        "label" : "Solars"
+                    }
+                }
+            },
+            "corruption"  : {
+                "FIELDS" : {
+                    "category" : {
+                        "label" : "Category"
+                    }
+                }
+            },
+            "equipment" : {
+                "FIELDS" : {
+                    
+                }
+            },
+            "forceField" : {
+                "FIELDS" : {
+                    "protection" : {
+                        "label" : "Protection"
+                    },
+                    "overload" : {
+                        "value" : {
+                            "label" : "Overload"
+                        },
+                        "collapsed" : {
+                            "label" : "Collapsed"
+                        }   
+                    }
+                }
+            },
+            "modification" : {
+                "FIELDS" : {
+                    "type" : {
+                        "label" : "Type"
+                    },
+                    "category" : {
+                        "label" : "Category"
+                    },
+                    "usedWith" : {
+                        "label" : "Used With"
+                    }
+                }
+            },
+            "power" : {
+                "FIELDS" : {
+                    "discipline" : {
+                        "label" : "Discipline"
+                    },
+                    "minorSpecialisation" : {
+                        "label" : "Specialisation"
+                    },
+                    "difficulty" : {
+                        "label" : "Difficulty"
+                    },
+                    "rating" : {
+                        "label" : "Warp Rating"
+                    },
+                    "range" : {
+                        "label" : "Range"
+                    },
+                    "target" : {
+                        "label" : "Target"
+                    },
+                    "duration" : {
+                        "label" : "Duration"
+                    },
+                    "overt" : {
+                        "label" : "Overt"
+                    }
+                }
+            },
+            "protection" : {
+                "FIELDS" : {
+                    "category" : {
+                        "label" : "Category"
+                    },
+                    "armour" : {
+                        "label" : "Armour"
+                    },
+                    "locations" : {
+                        "label" : {
+                            "label" : "Locations"
+                        }
+                    }
+                }
+            },
+            "specialisation" : {
+                "FIELDS" : {
+                    "restricted" : {
+                        "label" : "Restricted"
+                    },
+                    "skill" : {
+                        "label" : "Skill"
+                    }
+                }
+            },
+            "talent"  : {
+                "FIELDS" : {
+                    "requirement" : {
+                        "value" : {
+                            "label" : "Requirement"
+                        },
+                        "script" : {
+                            "label" : "Requirement Script"
+                        }
+                    }
+                }
+            },
+            "origin"  : {
+                "FIELDS" : {
+                    "characteristics.base" : {
+                        "label" : "Characteristic"
+                    }
+                }
+            },
+            "weapon"  : {
+                "FIELDS" : {
+                    "attackType" : {
+                        "label" : "Attack Type"
+                    },
+                    "category" : {
+                        "label" : "Category"
+                    },
+                    "spec" : {
+                        "label" : "Specialisation"
+                    },
+                    "range" : {
+                        "label" : "Range"
+                    },
+                    "mag" : {
+                        "value" : {
+                            "label" : "Mag"
+                        }
+                    },
+                    "ammoCost" : {
+                        "label" : "Ammo Cost"
+                    }
+                }
+            },
+            "faction" : {
+                "FIELDS" : {
+                    "character" : {
+                        "characterisics" : {
+                            "base" : {
+                                "label" : "Characteristic"
+                            }
+                        }
+                    }
+                }
+            },
+            "trait" : {
+                "FIELDS" : {
+                    "category" : {
+                        "label" : "Category"
+                    },
+                    "attack": {
+                        "type" : {
+                            "label" : "Attack Type"
+                        },
+                        "characteristic": {
+                            "label": "Characteristic"
+                        },
+                        "damage": {
+                            "characteristic": {
+                                "label": "Characteristic"
+                            },
+                            "ignoreAP" : {
+                                "label" : "Ignore AP"
+                            }
+                        },
+                        "range" : {
+                            "label" : "Range"
+                        }
+                    },
+                    "vehicle" : {
+                        "maneuverable" : {
+                            "label" : "Maneuverable",
+                            "hint" : "Bonus to Vehicle Control Tests"
+                        }
+                    }
+                }
+            },
+            "pack" : {
+                "FIELDS" : {
+                    "ignoreEncumbrance" : {
+                        "label" : "Ignore Encumbrance"
+                    },
+                    "solars" : {
+                        "label" : "Solars"
+                    }
+                }
+            }
+        },
+        "Components" : {
+            "Locational" : {
+                "FIELDS" : {
+                    "prompt" : {
+                        "label" : "Prompt Location",
+                        "hint" : "Prompt for a location when added to an Actor."
+                    },
+                    "location.value" : {
+                        "label" : "Location"
+                    }
+                }
+            }
+        }
+    }
 }
